# regression-cpp

./: CMakeLists.txt  plot_data.py
data/: test.csv
src/: main.cpp  read_csv.cpp
